add page of Diseño y Color capilar

--- a/index.html
+++ b/index.html
@@ -795,11 +795,11 @@
                 <div class="icon">
                   <i class="bi bi-award"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="diseño-y-color-capilar.html" class="stretched-link">
                   <h3>DISEÑO Y COLOR CAPILAR </h3>
                 </a>
                 <p>Un programa de formación de 60 horas, con clases programadas durante tres días a la semana. Este curso se centra en el desarrollo de habilidades especializadas clave para los profesionales del cuidado capilar y la estética.</p>
-                <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                <a href="diseño-y-color-capilar.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
               </div>
             </div>
           </div><!-- End Service Item -->
