add page of Maquillaje y depilacion, corrected form in the name input

--- a/index.html
+++ b/index.html
@@ -813,11 +813,11 @@
                 <div class="icon">
                   <i class="bi bi-brush"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="maquillaje-y-depilacion.html" class="stretched-link">
                   <h3>MAQUILLAJE Y DEPILACIÓN</h3>
                 </a>
                 <p>Un programa formativo con una duración total de 60 horas, distribuidas a lo largo de tres días a la semana. Este curso se enfoca en proporcionar a los participantes una formación integral en las habilidades esenciales de peluquería y belleza.</p>
-                <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                <a href="maquillaje-y-depilacion.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
 
               </div>
             </div>
