--- a/servicio-corte-cabello-hombre.html
+++ b/servicio-corte-cabello-hombre.html
@@ -214,20 +214,20 @@
                       </select>
                     </div>
                     <div class="col-md-6 mt-2 form-group">
-                      <input name="name" type="text" class="form-control" placeholder="Nombre Completos" required>
+                      <input name="nombre" type="text" class="form-control" placeholder="Nombre Completos" required>
                     </div>
                     <div class="col-md-6 mt-2  form-group">
-                      <input name="email" type="text" class="form-control" placeholder="Correo" required>
+                      <input name="correo" type="text" class="form-control" placeholder="Correo" required>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col mt-2 form-group">
-                      <input name="website" type="text" class="form-control" placeholder="Celular" required>
+                      <input name="celular" type="text" class="form-control" placeholder="Celular" required>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col mt-2 form-group">
-                      <textarea name="comment" class="form-control" placeholder="Mensaje"></textarea>
+                      <textarea name="mensaje" class="form-control" placeholder="Mensaje"></textarea>
                     </div>
                   </div>
                   <button type="submit" class="btn btn-primary mt-2 text-center">Inscribirse</button>
