--- a/servicio-de-cortes-de-cabello-peinados-y-alisados.html
+++ b/servicio-de-cortes-de-cabello-peinados-y-alisados.html
@@ -216,22 +216,22 @@
                                             </select>
                                         </div>
                                         <div class="col-md-6 mt-2 form-group">
-                                            <input name="name" type="text" class="form-control" placeholder="Nombre Completo" required>
+                                            <input name="nombre" type="text" class="form-control" placeholder="Nombre Completo" required>
                                         </div>
                                         <div class="col-md-6 mt-2  form-group">
-                                            <input name="email" type="text" class="form-control"
+                                            <input name="correo" type="text" class="form-control"
                                                 placeholder="Correo" required>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col mt-2 form-group">
-                                            <input name="website" type="text" class="form-control"
+                                            <input name="celular" type="text" class="form-control"
                                                 placeholder="Celular" required>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col mt-2 form-group">
-                                            <textarea name="comment" class="form-control"
+                                            <textarea name="mensaje" class="form-control"
                                                 placeholder="Mensaje" required></textarea>
                                         </div>
                                     </div>
