Fix volunteer form link and update Google Maps iframe

--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
                 <li><i class="bi bi-check-circle"></i> Serás parte de una red solidaria que marca la diferencia.</li>
               </ul>
 
-              <p>Si estás interesado en ser voluntario, completa nuestro <a
-                  href="enlace-al-formulario-de-voluntariado">formulario de voluntariado</a> o ponte en contacto con
+              <p>Si estás interesado en ser voluntario, completa nuestro a formulario de voluntariado </a> o ponte en
+                contacto con
                 nosotros a través de <a
                   href="mailto:info@fundacionavanzandojuntos.org">avanzandojuntosfundacion@gmail.com</a>. Estamos
                 emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
@@ -1382,8 +1382,9 @@
 
       <div class="map">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1560.6449153614121!2d-79.17321907951028!3d-0.25251170685903157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMMKwMTUnMDguMyJTIDc5wrAxMCcxNC45Ilc!5e0!3m2!1ses!2sec!4v1703696019784!5m2!1ses!2sec"
-          frameborder="0" allowfullscreen></iframe>
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15959.118515598426!2d-79.1707934!3d-0.25233!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d54713a30bf3b9%3A0x20338f78ba1453ec!2sFundaci%C3%B3n%20Avanzando%20Juntos!5e0!3m2!1ses-419!2sec!4v1705714353677!5m2!1ses-419!2sec"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div><!-- End Google Maps -->
 
       <div class="container">
