--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/social-icon.css">
+
 </head>
 
 <body>
@@ -147,6 +150,19 @@
   </section><!-- End Hero Section -->
 
   <main id="main">
+    <div class="social-icons">
+      <a href="https://www.facebook.com/FundacionAvanzandoJuntos" title="Facebook" target="_blank"><i
+          class="bi bi-facebook"></i></a>
+      <a href="https://www.tiktok.com/@fundacionavanzandojuntos" title="TikTok" target="_blank"><i
+          class="bi bi-tiktok"></i></a>
+      <a href="https://www.instagram.com/avanzando_juntosf/" title="Instagram" target="_blank"><i
+          class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/fundaci%C3%B3n-avanzando-juntos" title="Linkedln" target="_blank"><i
+          class="bi bi-linkedin"></i></a>
+          <a href="https://wa.me/593967792409" target="_blank" title="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+
+      <!-- Agrega aquí más iconos según sea necesario -->
+    </div>
 
     <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services">
@@ -406,7 +422,7 @@
         <div class="row g-0">
 
           <div class="col-lg-12">
-            <div class="content d-flex flex-column justify-content-center h-100">
+            <div class="content d-flex flex-column justify-content-center h-100 align-items-center">
               <h3>Participar de Voluntariado en la Fundación</h3>
               <p class="fst-italic">
               <p>Como voluntario, tendrás la oportunidad de participar en diversas actividades solidarias, desde eventos
@@ -426,6 +442,8 @@
                 emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
               <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 Me interesa
+                <i class="bi bi-arrow-right"></i>
+
               </button>
             </div>
           </div>
@@ -1517,9 +1535,9 @@
 
     <div class="footer-legal text-center">
       <div
-        class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
+        class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-center align-items-center">
 
-        <div class="d-flex flex-column align-items-center align-items-lg-start">
+        <div class="d-flex flex-column align-items-center align-items-lg-center">
           <div class="copyright">
             &copy; Copyright <strong><span>Fundación Avanzando Juntos</span></strong>. All Rights Reserved
           </div>
@@ -1530,15 +1548,21 @@
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
             Designed by <a href="https://anyel.top">Anyel EC</a>
           </div>
+          <div class="social-links  order-lg-last mb-3 mb-lg-0 mt-3">
+            <a href="https://www.facebook.com/FundacionAvanzandoJuntos" title="Facebook" class="facebook"><i
+                class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/avanzando_juntosf/"  title="Instagram"class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/fundaci%C3%B3n-avanzando-juntos" title="Linkedln" class="linkedin"><i
+                class="bi bi-linkedin"></i></a>
+            <a href="https://www.tiktok.com/@fundacionavanzandojuntos"title="TikTok"  class="tiktok"><i
+                class="bi bi-tiktok"></i></a>
+            <a href="https://wa.me/593967792409" title="WhatsApp" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+
+          </div>
         </div>
 
-        <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        </div>
+
+
       </div>
     </div>
 
