--- a/prueba.html
+++ b/prueba.html
@@ -1,70 +1,28 @@
-<!-- LINk CDN bs5-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/css/bootstrap.min.css">
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-    Me interesa
-</button>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        /* Estilos para la columna flotante */
+        
+    </style>
+    <title>Iconos Sociales Flotantes</title>
+</head>
+<body>
 
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <!-- Formulario dentro del modal -->
-                <form action="https://formspree.io/f/mbjnlyvw" method="post">
-                    <div class="mb-3">
-                        <label for="exampleInputName" class="form-label">Nombre: </label>
-                        <input type="text" class="form-control" name="nombre" id="exampleInputName"
-                            aria-describedby="nameHelp" placeholder="Ingrese su nombre">
-                    </div>
-                    <div class="mb-3">
-                        <label for="celular" class="form-label">Celular</label>
-                        <input type="text" class="form-control" id="celular" maxlength="10" name="celular"
-                            aria-describedby="emailHelp" placeholder="Ingrese su celular">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="exampleInputEmail" name="correo"
-                            aria-describedby="emailHelp" placeholder="Ingrese su correo">
-                        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="volunteerReason" class="form-label">¿Por qué quieres ser voluntario en la
-                            fundación?</label>
-                        <select class="form-select" id="volunteerReason" aria-describedby="volunteerReasonHelp">
-                            <option value="" disabled selected>Selecciona una razón</option>
-                            <option value="passion">Pasión por la causa</option>
-                            <option value="community">Participación comunitaria</option>
-                            <option value="skills">Utilizar habilidades para una buena causa</option>
-                            <option value="impact">Generar un impacto positivo</option>
-                            <option value="other">Otro (por favor, especifica en el mensaje)</option>
-                        </select>
-                        <div id="volunteerReasonHelp" class="form-text">Elige una razón que describa mejor por qué
-                            quieres ser voluntario.</div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputMessage" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="exampleInputMessage" name="mensaje" rows="3"
-                            placeholder="Ingrese su mensaje"></textarea>
-                    </div>
-
-
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <!--input de tipo submit-->
-            </div>
-        </div>
+    <!-- Contenido principal del sitio web -->
+    <div class="container mt-5">
+        <h1>Mi Sitio Web</h1>
+        <p>Bienvenido a mi sitio web.</p>
+        <!-- Agrega aquí tu contenido principal -->
     </div>
-</div>
-<!-- LINk CDN bs5-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/js/bootstrap.min.js"></script>
+
+    <!-- Columna flotante de iconos sociales -->
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
