add sites of lenguaje tsafiqui and update index.html

--- a/index.html
+++ b/index.html
@@ -723,6 +723,35 @@
 
         <div class="row gy-5">
 
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/cursos/tsafiki.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-person"></i>
+                </div>
+                <a href="servicio-corte-cabello-hombre.html" class="stretched-link">
+                  <h3>LENGUAJE TSA´FIKI
+                  </h3>
+                </a>
+                <p>Desarrollar habilidades comunicativas orales y escritas 
+                  en las cuales los estudiantes puedan hacer el uso de 
+                  vocabulario, gramática y habilidades de lenguaje para 
+                  construir textos o discursos de una manera pragmática.</p>
+                <a href="Lenguaje-Tsafiki.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
+
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+
+
+          <!--------------------------------------------------------------------->
+
+
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
@@ -1284,7 +1313,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/auspiciantes/cnel.jpg" class="img-fluid" alt="">
+                <img src="assets/img/clients/istt-removebg-preview.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -1293,7 +1322,7 @@
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>CNEL Santo Domingo</h4>
+                <h4>Instituto Superior Tecnologíco Tsáchilas</h4>
                 <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
