Update course image and homepage image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="row justify-content-center gy-6">
 
             <div class="col-lg-5 col-md-8">
-              <img src="assets/img/funda port 3.jpeg" alt="" class="img-fluid img">
+              <img src="assets/img/funda_new.jpeg" alt="" class="img-fluid img">
             </div>
 
             <div class="col-lg-9 text-center">
